# deepseek-tui-py

./: .cursorignore  .gitignore  .pre-commit-config.yaml  Makefile  README.md  TASKS.md  UI_IMPROVEMENTS.md  config.example.toml  pyproject.toml  requirements-dev.txt  requirements.txt  session_20260514_165534.json
contracts/: errors.schema.json  runtime-api.openapi.yaml  sse-event.schema.json
design/: main-background-frame-preview.html
docs/: API.md  APPROVAL_CODE_AUDIT.md  APPROVAL_SYSTEM_DESIGN.md  AUDIT_2026-05-10.md  AUDIT_REPORT.md  AUTOMATION_FRAMEWORK.md  BACKEND_AUDIT_ADJUDICATION_2026-07-24.md  BUG.txt  CAPABILITY_MODULE_REFACTOR_PLAN.md  CAPABILITY_MODULE_REFACTOR_PROGRESS.md  CAPABILITY_MODULE_REFACTOR_REMAINING.md  CONFIG.md  DYNAMIC_WORKFLOW.md  EMBEDDED_EXECUTOR.md  EXPERIENCE_EVOLUTION_BACKLOG.md  EXPERIENCE_EVOLUTION_IMPLEMENTATION.md  FEISHU_SETUP.zh-CN.md  HANDOVER.md  MEMORY_INTEGRATION.md  MEMORY_INTEGRATION_BACKLOG.md  MEMORY_INTEGRATION_P1_CHECKLIST.md  P0-AUDIT-REPORT.md  P1-AUDIT-REPORT.md  PLUGIN_SYSTEM.md  PLUGIN_SYSTEM_OPTIMIZATION.md  PYTHON_PHASE_1_4_TRACE.md  RUNTIME_LEGACY.md  SANDBOX_ARCHITECTURE.md  SUMMARY.md  TOOL_ALIGNMENT_SESSION_2026-07-24.md  WORKBENCH_APPROVAL_MANUAL_TEST.md  WORKBENCH_ARCHITECTURE.md  WORKBENCH_BACKLOG.md  WORKBENCH_HANDOVER.md  architecture-overview.html  automation-baidu-email.example.toml  automation-email.example.toml  automation-feishu.example.toml  deadcode_audit.md  decoupling-plan.md  (+16 more)
scratch/: sort_benchmark.py  sort_benchmark_report.md  workflow-wrapup-plan.md
scripts/: contract-check.sh  dev-workbench.sh  e2e_three_automations.py  run-baidu-hotsearch-once.sh  smoke-workbench-auth.sh  smoke-workbench-chat.sh  start-feishu-bridge.sh  start-service.sh  verify-workbench.sh  workflow_demo_trace.py
tests/: _real_api.py  _skills_lint_report.md  conftest.py  test_agent_segments.py  test_agent_wait_tool_errors.py  test_app_server.py  test_approval_gate.py  test_approval_presentation.py  test_approval_system.py  test_audit_fixes.py  test_automation_manager.py  test_automation_pipeline.py  test_background_job_tools.py  test_checklist_tool_aliasing.py  test_client.py  test_config.py  test_config_warnings.py  test_delegate_ui.py  test_delivery_format.py  test_hooks.py  (+80 more)
(+945 files in other folders)
